--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
+html {
+    font-size:0.8vw;
+}
 body{
     width:100%;
     min-width:50%;
-    font-size:15px;
     background: #0F1C30;
     margin:0 0;
     color:#668DC0;
@@ -40,7 +42,7 @@ nav a{
     text-decoration: none;
     color:#668DC0;
 }
-nav a:active{
+nav a, a:active{
     color:#C2C6CE;
 }
 .imagen-principal{
@@ -150,6 +152,8 @@ footer{
     display:flex;
     justify-content:center;
     align-items:center;
+    width:100%;
+    height:25vh;
     font-size:2.5rem;
     text-align:center;
     border-top:2px solid #C0D0EF;
@@ -159,7 +163,7 @@ footer .contenedor-iconos{
     justify-content:center;
 }
 footer a{
-    width:7vw;
+    width:4vw;
     margin:0 1vw;
 }
 footer .icono {
