--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,10 @@ a{
     text-decoration: none;
     color:black;
 }
+a:hover{
+    transition:1s;
+    color:var(--secundario-claro);
+}
 #seguridad{
     display:flex;
     flex-direction: column;
@@ -175,6 +179,9 @@ footer{
     text-align:center;
     border-top:2px solid var(--secundario-claro);
 }
+footer h3{
+    color:var(--principal-oscuro);
+}
 footer .contenedor-iconos{
     display:flex;
     justify-content:center;
@@ -217,4 +224,36 @@ footer .icono {
 }
 h2{
     font-size:5rem;
+}
+/* =================================================== SWITCH DARK MODE ========================================*/
+.switch{
+    position:relative;
+    display:inline-block;
+    width:120px;
+    height:60px;
+    background-color: var(--principal-oscuro);
+    border-radius: 60px;
+    cursor:pointer;
+}
+.switch::after{
+    content:'';
+    position:absolute;
+    width:50px;
+    height:50px;
+    border-radius: 50px;
+    background-color: var(--principal-claro);
+    left:5px;
+    top:5px;
+    transition: all 0.4s;
+}
+input[type="checkbox"]:checked + .switch::after{
+    transform:translateX(60px);
+    background-color:var(--principal-claro);
+}
+input[type="checkbox"]:checked + .switch{
+    background-color: var(--principal-oscuro);
+}
+.offscreen {
+    position:absolute;
+    left:-999999px;
 }
